--- a/app.component.html
+++ b/app.component.html
@@ -1,3 +1,4 @@
+<router-outlet ></router-outlet>
 <body>
 <div>
     <section>
@@ -36,11 +37,14 @@
     <button mat-flat-button color="warn" (click)="showChildComponent()" >Show Directive and I/O</button>
     <br>
     <br>
-    <button mat-flat-button color="warn" (click)="sendMessageToBehaviorSubject()">Behaviour Subject</button>
+    <button mat-flat-button color="warn" (click)="sendMessageToBehaviorSubject()" >Behaviour Subject</button>
   </div>
   </div>
 <app-child-component *ngIf="showChild" (outputEmit)="bindChildValue($event)" [inputEmit]="parent"></app-child-component>
 <br>
 <br>
-<app-promise *ngIf="promiseComponent"></app-promise>
+<nav>
+  <a *ngIf="promiseComponent" routerLink="/input" routerLinkActive="active">Router</a></nav>
+<!-- <app-promise ></app-promise> -->
+<router-outlet></router-outlet>
 </body>
